--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-formik": "^1.7.8",
